--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="App.css">
   <title>Job Opening At Abhyaz</title>
 </head>
 <body>
-
+  <header>
+    <img src="https://www.abhyaz.com/logo.png" alt="Abhyaz logo">
+  </header>
 </body>
 </html>
