job Description Added

--- a/index.html
+++ b/index.html
@@ -8,8 +8,35 @@
   <title>Job Opening At Abhyaz</title>
 </head>
 <body>
+  <!-- Header Section -->
   <header>
     <img src="https://www.abhyaz.com/logo.png" alt="Abhyaz logo">
   </header>
+<!-- Job Description -->
+<section>
+  <h2>Job Description</h2>
+  <p>We are seeking a highly motivated Marketing Manager to join our team at Abhyaz. The successful candidate will be responsible for developing and executing marketing strategies to promote our products and services. Key responsibilities include:</p>
+  <ul>
+    <li>Developing and implementing marketing plans</li>
+    <li>Managing social media accounts</li>
+    <li>Creating and managing email campaigns</li>
+    <li>Conducting market research and analyzing data</li>
+    <li>Collaborating with other departments to ensure consistent messaging</li>
+  </ul>
+  <p>The ideal candidate will have a Bachelor's degree in Marketing, Communications, or related field, and at least 5 years of experience in marketing. Strong communication and organizational skills are a must.</p>
+  <h2>Company Information</h2>
+  <p>Abhyaz is a leading provider of innovative products and services in the technology industry. Our mission is to empower people and organizations to achieve their full potential through cutting-edge technology solutions. Our culture is centered around collaboration, creativity, and excellence.</p>
+  <h2>Benefits and Perks</h2>
+  <ul>
+    <li>Competitive salary</li>
+    <li>Health insurance</li>
+    <li>401(k) plan</li>
+    <li>Flexible work schedule</li>
+    <li>Opportunities for professional development</li>
+  </ul>
+  <h2>Application Instructions</h2>
+  <p>To apply for this position, please submit your resume and cover letter to HR@abhyaz.com. Please include "Marketing Manager" in the subject line. We will review applications on a rolling basis.</p>
+  <button>Apply Now</button>
+</section>
 </body>
 </html>
