job role done with css

--- a/index.html
+++ b/index.html
@@ -15,16 +15,49 @@
 <!-- Job Description -->
 <section>
   <h2>Job Description</h2>
-  <p>We are seeking a highly motivated Marketing Manager to join our team at Abhyaz. The successful candidate will be responsible for developing and executing marketing strategies to promote our products and services. Key responsibilities include:</p>
+  <!-- Marketing Manager -->
+  <h2>Responsibilities</h2>
+  <p>We are seeking a highly motivated <b>Marketing Manager </b>to join our team at Abhyaz. 
+    The successful candidate will be responsible for developing and executing marketing strategies to promote our products and services. 
+   </p>
   <ul>
-    <li>Developing and implementing marketing plans</li>
-    <li>Managing social media accounts</li>
-    <li>Creating and managing email campaigns</li>
-    <li>Conducting market research and analyzing data</li>
-    <li>Collaborating with other departments to ensure consistent messaging</li>
+    <li>Develop strategies and tactics to get the word out about our company and drive qualified traffic to our front door.</li>
+    <li>Deploy successful marketing campaigns and own their implementation from ideation to execution.</li>
+    <li>Produce valuable and engaging content for our website and blog that attracts and converts our target groups.</li>
+    <li>Build strategic relationships and partner with key industry players, agencies and vendors.</li>
+    <li>Analyze consumer behavior and adjust email and advertising campaigns accordingly.</li>
   </ul>
-  <p>The ideal candidate will have a Bachelor's degree in Marketing, Communications, or related field, and at least 5 years of experience in marketing. Strong communication and organizational skills are a must.</p>
-  <h2>Company Information</h2>
+  <h2>Requirements and skills</h2>
+  <ul>
+    <li>Proven working experience in web programming.</li>
+    <li>Top-notch programming skills and in-depth knowledge of modern HTML/CSS.</li>
+    <li>A solid understanding of how web applications work including security, session management, and best development practices</li>
+    <li>Adequate knowledge of relational database systems, Object Oriented Programming and web application development</li>
+  </ul>
+  <button>Apply Now</button>
+  <!-- Web Development -->
+  <p>We are looking for an outstanding <b>Web Developer</b> to be responsible for the coding, 
+    innovative design and layout of our website. 
+    Web developer responsibilities include building our website from concept all the way to completion from the bottom up, 
+    fashioning everything from the home page to site layout and function.</p>
+    <h2>Responsibilities</h2>
+  <ul>
+    <li>Write well designed, testable, efficient code by using best software development practices.</li>
+    <li>Create website layout/user interface by using standard HTML/CSS practices.</li>
+    <li>Integrate data from various back-end services and databases.</li>
+    <li>Create and maintain software documentation.</li>
+    <li>Be responsible for maintaining, expanding, and scaling our site.</li>
+  </ul>
+  <h2>Requirements and skills</h2>
+  <ul>
+    <li>Proven working experience in web programming.</li>
+    <li>Top-notch programming skills and in-depth knowledge of modern HTML/CSS.</li>
+    <li>A solid understanding of how web applications work including security, session management, and best development practices</li>
+    <li>Adequate knowledge of relational database systems, Object Oriented Programming and web application development</li>
+  </ul>
+  <button>Apply Now</button>
+  
+    <h2>Company Information</h2>
   <p>Abhyaz is a leading provider of innovative products and services in the technology industry. Our mission is to empower people and organizations to achieve their full potential through cutting-edge technology solutions. Our culture is centered around collaboration, creativity, and excellence.</p>
   <h2>Benefits and Perks</h2>
   <ul>
@@ -36,7 +69,7 @@
   </ul>
   <h2>Application Instructions</h2>
   <p>To apply for this position, please submit your resume and cover letter to HR@abhyaz.com. Please include "Marketing Manager" in the subject line. We will review applications on a rolling basis.</p>
-  <button>Apply Now</button>
+  
 </section>
 </body>
 </html>
