--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </header>
 <!-- Job Description -->
 <section>
-  <h2>Job Description</h2>
+  <h2 id="job_opening">Job Opening</h2>
   <!-- Marketing Manager -->
   <h2>Responsibilities</h2>
   <p>We are seeking a highly motivated <b>Marketing Manager </b>to join our team at Abhyaz. 
@@ -29,12 +29,12 @@
   </ul>
   <h2>Requirements and skills</h2>
   <ul>
-    <li>Proven working experience in web programming.</li>
-    <li>Top-notch programming skills and in-depth knowledge of modern HTML/CSS.</li>
-    <li>A solid understanding of how web applications work including security, session management, and best development practices</li>
-    <li>Adequate knowledge of relational database systems, Object Oriented Programming and web application development</li>
+    <li>Demonstrable experience in marketing together with the potential and attitude required to learn.</li>
+    <li>Solid knowledge of website analytics tools (e.g., Google Analytics, NetInsight, Omniture, WebTrends).</li>
+    <li>Experience in setting up and optimizing Google Adwords campaigns.</li>
+    <li>A sense of aesthetics and a love for great copy and witty communication.</li>
   </ul>
-  <button>Apply Now</button>
+  <button>Apply Now</button><hr>
   <!-- Web Development -->
   <p>We are looking for an outstanding <b>Web Developer</b> to be responsible for the coding, 
     innovative design and layout of our website. 
@@ -56,19 +56,25 @@
     <li>Adequate knowledge of relational database systems, Object Oriented Programming and web application development</li>
   </ul>
   <button>Apply Now</button>
-  
+  <hr>
+
     <h2>Company Information</h2>
-  <p>Abhyaz is a leading provider of innovative products and services in the technology industry. Our mission is to empower people and organizations to achieve their full potential through cutting-edge technology solutions. Our culture is centered around collaboration, creativity, and excellence.</p>
-  <h2>Benefits and Perks</h2>
+  <p>At Abhyaz, we hire curious and talented individuals from all backgrounds.
+    We offer both technical and non-technical career opportunities for students.
+    We embrace diversity and value unique perspectives and experiences.
+    Our goal is to provide a better learning experience for students so that they can make efficient use of their skills.
+    If you perform well during your internship, you may have the opportunity to work with us after graduation. 
+   We offer remote internships in various fields that provide real-world experience.</p> <hr>
+  <h2>About Our Internship</h2>
   <ul>
-    <li>Competitive salary</li>
-    <li>Health insurance</li>
-    <li>401(k) plan</li>
-    <li>Flexible work schedule</li>
+    <li>The internship program runs from Monday to Saturday, from 1 PM to 6 PM. The 2nd and 4th Saturdays are holidays.</li>
+    <li>The minimum duration of the internship program for undergraduates is one month.</li>
+    <li>After completing the internship, you will receive a certificate within a week.</li>
+    <li>Based on your performance and outcomes, you will receive attractive compensation.</li>
     <li>Opportunities for professional development</li>
-  </ul>
+  </ul> <hr>
   <h2>Application Instructions</h2>
-  <p>To apply for this position, please submit your resume and cover letter to HR@abhyaz.com. Please include "Marketing Manager" in the subject line. We will review applications on a rolling basis.</p>
+  <p>To apply for this position, please submit your resume and cover letter to HR@abhyaz.com. Please include "Marketing Manager" in the subject line. We will review applications on a rolling basis.</p> <hr>
   
 </section>
 </body>
