--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   </ul>
   <button>Apply Now</button>
   <hr>
-
+<!-- Company Information -->
     <h2>Company Information</h2>
   <p>At Abhyaz, we hire curious and talented individuals from all backgrounds.
     We offer both technical and non-technical career opportunities for students.
@@ -65,6 +65,7 @@
     Our goal is to provide a better learning experience for students so that they can make efficient use of their skills.
     If you perform well during your internship, you may have the opportunity to work with us after graduation. 
    We offer remote internships in various fields that provide real-world experience.</p> <hr>
+   <!-- About Internship -->
   <h2>About Our Internship</h2>
   <ul>
     <li>The internship program runs from Monday to Saturday, from 1 PM to 6 PM. The 2nd and 4th Saturdays are holidays.</li>
@@ -73,6 +74,7 @@
     <li>Based on your performance and outcomes, you will receive attractive compensation.</li>
     <li>Opportunities for professional development</li>
   </ul> <hr>
+  <!-- Application Instructions -->
   <h2>Application Instructions</h2>
   <p>To apply for this position, please submit your resume and cover letter to HR@abhyaz.com. Please include "Marketing Manager" in the subject line. We will review applications on a rolling basis.</p> <hr>
   
